// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders body only 1`] = `
<React.Fragment>
  <IndentedComment
    author={
      Object {
        "username": null,
      }
    }
    body="Woof"
    createdAt="1995-12-17T03:24:00.000Z"
    footer={
      <React.Fragment>
        <ReplyButton
          active={false}
          id="comments-commentContainer-replyButton-comment-id"
          onClick={[Function]}
        />
        <withContext(withLocalStateContainer(PermalinkContainer))
          commentID="comment-id"
        />
      </React.Fragment>
    }
    indentLevel={1}
  />
</React.Fragment>
`;

exports[`renders username and body 1`] = `
<React.Fragment>
  <IndentedComment
    author={
      Object {
        "username": "Marvin",
      }
    }
    body="Woof"
    createdAt="1995-12-17T03:24:00.000Z"
    footer={
      <React.Fragment>
        <ReplyButton
          active={false}
          id="comments-commentContainer-replyButton-comment-id"
          onClick={[Function]}
        />
        <withContext(withLocalStateContainer(PermalinkContainer))
          commentID="comment-id"
        />
      </React.Fragment>
    }
    indentLevel={1}
  />
</React.Fragment>
`;
